# pickup

./: Cargo.toml  LICENSE  README.md  README_CN.md
bindings/: Cargo.toml  build.rs
src/: common.rs  linux_clip.rs  main.rs  osx_clip.rs  win_clip.rs
