[package]
name = "pickup"
version = "0.1.0"
authors = ["b1"]
edition = "2018"

[dependencies]
#windows = { git = "https://github.com/microsoft/windows-rs" }
#bindings = { path = "bindings" }
rand = "0.7.3"
glob = "0.3.0"
anyhow = "1.0.38"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_id = "0.1"
objc-foundation = "0.1"
cocoa = "0.24.0"