[package]
name = "pickup"
version = "0.2.0"
authors = ["b1"]
edition = "2018"

[dependencies]
rand = "0.7.3"
glob = "0.3.0"
anyhow = "1.0.38"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.3.1"
bindings = { path = "bindings" }